--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -207,8 +207,8 @@ footer {
 @media (max-width: 1200px) {
   nav {
     height: auto;
-    justify-content: space-between; 
-    align-items: center;
+    display: flex;
+    flex-direction: column;
     padding: 10px;
     gap: 10px;
   }
@@ -220,14 +220,14 @@ footer {
 
   .nav-title {
     font-size: 1em;
-    text-align: right;
-    padding: 10px 20px;
+    text-align: center;
+    padding: 10px 10px;
     margin: 0 auto;
-    width: 100%;
+    
   }
 
   .nav-buttons {
-    flex-direction:column;
+    flex-direction: column;
     justify-content: left;
     gap: 8px;
   }
@@ -292,8 +292,8 @@ footer {
   .intro {
     line-height: 1.4;
   }
-
 }
+
 
 
 
